Fix findbugs warnings and code quality issues
- Fix deprecated API usage in SVGGraphics2D
- Fix resource leaks in Attribute and Histogram classes
- Update JSP configuration for security
- Fix test compilation issues in TestSwarm
- Fix streaming packet handler synchronization
- Fix getopt argument parsing
- Fix data helper encoding issues
- Update test certificates